# testing

./: .gitignore  Procfile  README.md  cookies_redirect_trololo.json  pyproject.toml  start_website.sh
website/: __init__.py  helpers.py
website/static/: TOS.odt  headlessDetect.js
website/templates/: 01.1.redirect.html  01.2.redirect.html  01.3.redirect.html  01.4.redirect.html  01.5.redirect.html  01.6.redirect.html  02.1.redirect.html  02.2.redirect.html  02.3.redirect.html  02.4.redirect.html  02.5.redirect.html  02.6.redirect.html  02.7.redirect.html  02.8.redirect.html  03.1.frame.html  04.1.hell.html  05.01.vm_detect.html  06.1.phishing.html  99.1.check_capture_parameters.html  99.1.check_headless.html  99.2.dynamic_download.html  99.3.compute_hashes.html  99.4.cool_phishing.html  i_see_you.html  index.html  ip.html  main.html  special.html
