[tool.poetry]
name = "lookyloo-testing"
version = "0.1.0"
description = "Simple webserver for testing lookyloo"
authors = ["Raphaël Vinot <raphael@lookyloo.eu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
Bootstrap-Flask = "^2.4.1"
ip2geotools = "^0.1.6"
gunicorn = "^23.0.0"
lxml = "^5.3.0"
gitpython = "^3.1.43"
flask-httpauth = "^4.8.0"
flask-wtf = "^1.2.1"

[tool.poetry.dev-dependencies]
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
