[tool.poetry]
name = "lookyloo-testing"
version = "0.1.0"
description = "Simple webserver for testing lookyloo"
authors = ["Raphaël Vinot <raphael@lookyloo.eu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.1.2"
Bootstrap-Flask = "^2.5.0"
gunicorn = "^23.0.0"
lxml = "^6.0.2"
gitpython = "^3.1.45"
flask-httpauth = "^4.8.0"
flask-wtf = "^1.2.2"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
types-requests = "^2.32.4.20250913"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
